--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,82 @@
 @charset "utf-8";
  
 body{
+	margin: 0;
+	height: 100%
 	font: 0.9em Tahoma, Verdana, Arial;
 	line-height:160%;
 	background: #ddd;
+	background-image:url(../images/bg.png);
+	min-width: 1200px;
+	
+}
+html{
+	height: 100%
 }
  
+#main{
+	width: %100;
+	  margin-left: auto ;
+  margin-right: auto ;
+} 
+#banner{
+	width: :100%;
+	height: 100px;
+	background: #4788ff;
+	text-align:center;
+} 
+.bannerAdi{
+	width: 300px;
+	padding-top: 60px;
+	float:left;
+	color: #fff;
+	font-weight: bold;
+	font-family: Comic Sans MS;
+	font-size: 30px;
+}
+.bannerLinkler{
+	float:right;
+	width: 700px;
+	height: 50px;
+ }
+.bannerLink{
+	width: 150px;
+	color: #fff;
+	height:  50px;
+	float:left;
+}
+.bannerLink:hover{
+	background-color: #fff;
+	color: #4788ff;
+}
 #container{
 	width: 1000px;
 	padding: 25px;
 	background: #fff;
 	margin: 100px auto 0 auto;
 }
- 
+#icerik{
+  margin-left: auto ;
+  margin-right: auto ;
+	width: 1200px;
+		height:100vh;
+}
+#icerikLinkler{
+	text-align:left;
+	float: left;
+	width: 300px;
+	height:100%;
+  border-right-width:1px;
+  border-right-style:solid;
+  border-right-color:#ccc;
+}
+#icerikEtkinlikler{
+	float: right;
+	width: 700px;
+	  border-right-width:1px;
+  border-right-style:solid;
+  border-right-color:#ccc;
+}
 h4{
 	margin: 0;
 }
@@ -25,4 +89,11 @@ ul li{
 	display: inline-block;
 	padding: 15px;
 	list-style: none;
+}
+#alt{
+	text-align:center;
+	width: 100%;
+	height: 40px;
+	background-color: #505050;
+	color: #B0B0B0 ;
 }
