--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ html{
 	text-align:center;
 	  border-bottom-width:1px;
   border-bottom-style:solid;
-  border-bottom-color:#000;
+  border-bottom-color:#fff;
 } 
 .bannerAdi{
 	width: 300px;
