--- a/css/style.css
+++ b/css/style.css
@@ -20,22 +20,27 @@ html{
   margin-right: auto ;
 } 
 #banner{
-	width: :100%;
-	height: 100px;
+	width: 100%;
+	height: 50px;
 	background: #4788ff;
 	text-align:center;
 	  border-bottom-width:1px;
   border-bottom-style:solid;
   border-bottom-color:#fff;
 } 
+#bannerContainer
+{
+text-align:center;
+	width: 1000px;
+}
 .bannerAdi{
 	width: 300px;
-	padding-top: 60px;
+	padding-top: 15px;
 	float:left;
 	color: #fff;
 	font-weight: bold;
 	font-family: Comic Sans MS;
-	font-size: 30px;
+	font-size: 20px;
 }
 .bannerLinkler{
 	float:right;
