--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,12 @@ html{
 	  margin-left: auto ;
   margin-right: auto ;
 } 
+.clear
+{
+	clear:both;
+	height:0;
+	overflow:hidden;
+}
 #banner{
 	width: 100%;
 	height: 50px;
@@ -33,10 +39,10 @@ html{
 margin: auto;
 padding:0;
 text-align:center;
-	width: 1000px;
+	width: 980px;
 }
 .bannerAdi{
-	width: 300px;
+	width: 280px;
 	padding-top: 15px;
 	float:left;
 	color: #fff;
@@ -61,7 +67,7 @@ text-align:center;
 	/*background-image:url(../images/bg.png); */
 }
 #container{
-	width: 1000px;
+	width: 980px;
 	padding: 25px;
 	background: #fff;
 	margin: 100px auto 0 auto;
@@ -69,7 +75,8 @@ text-align:center;
 #icerik{
   margin-left: auto ;
   margin-right: auto ;
-	width: 1200px;
+	width: 980px;
+min-height:500px;
 		height:100vh;
 		text-align: center;
 }
@@ -84,13 +91,12 @@ text-align:center;
 }
 #icerikEtkinlikler{
 	text-align: center;
-	position: absolute;
 	margin: auto;
-	/*width: 1200px;*/
+	width: 980px;
 	height: 500px;
-	  border-right-width:1px;
-  border-right-style:solid;
-  border-right-color:#ccc;
+	border-right-width:1px;
+ 	border-right-style:solid;
+  	border-right-color:#ccc;
 }
 h4{
 	margin: 0;
